fix 1080p bg img overflow

--- a/themes/frame/source/css/layout.styl
+++ b/themes/frame/source/css/layout.styl
@@ -18,6 +18,7 @@ body
   position absolute
   width 100%
   z-index -1
+  overflow hidden
   img
     width 50%
     transform scaleX(-1) rotate(30deg)
